Fix video alignment/margin

--- a/public/stylesheets/sass/prototypes.scss
+++ b/public/stylesheets/sass/prototypes.scss
@@ -281,4 +281,6 @@ strong {
 
 .player-container {
   @include media-player;
+
+  margin:0;
 }
